--- a/client/package.json
+++ b/client/package.json
@@ -19,10 +19,12 @@
     "font-awesome": "^4.7.0",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "universal-cookie": "^2.1.2",
     "vue": "^2.5.2",
     "vue-html5-editor": "^1.1.1",
     "vue-router": "^3.0.1",
-    "vue-ydui": "^1.1.1"
+    "vue-ydui": "^1.1.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
