添加了vuex 的组件测试

--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "universal-cookie": "^2.1.2",
     "vue": "^2.5.2",
     "vue-html5-editor": "^1.1.1",
+    "vue-markdown": "^2.2.4",
     "vue-router": "^3.0.1",
     "vue-ydui": "^1.1.1",
     "vuex": "^3.0.1"
